# microservice-rcpp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: build-push-image.yml
data/c/: a.out  run.sh  temp.c
data/cpp/: a.out  run.sh  temp.cpp
data/rust/: run.sh  temp.rs
proto/: api.proto
src/: main.rs  utils.rs
src/lib/: mod.rs
